--- a/_posts/2014-12-12-memememe.md
+++ b/_posts/2014-12-12-memememe.md
@@ -41,6 +41,8 @@ memememe2memememe is a sculpture that celebrates the ambiguities of human/object
     <iframe src="//player.vimeo.com/video/121315652" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
 
+![](/assets/projects/memememe-selfie/selfies2_s.jpg)
+
 Residues of their [conversation](http://memememeselfie.tumblr.com/){:target="_blank"} can be seen on their tumblr [feeds](http://memememe2memememe.tumblr.com/){:target="_blank"}.
 
 ## Ob_ject and Ob_serve
