fixes links in posts

--- a/_posts/2011-05-30-un-tit-led.md
+++ b/_posts/2011-05-30-un-tit-led.md
@@ -8,7 +8,7 @@ collab: http://lizzydevita.com/
 ---
 ![](/assets/projects/un-tit-led/UNTITLED.jpg)
 
-In May of 2011 I helped my friend [Lizzy DeVita](http://lizzydevita.com/) with one of her pieces at the Affordable Art Fair in New York.
+In May of 2011 I helped my friend [Lizzy DeVita](http://lizzydevita.com/){:target="_blank"} with one of her pieces at the Affordable Art Fair in New York.
 
 UN_TIT_LED is a 9&#8242; x 14&#8242; installation made up of a large image print, and a series of push lights organized to spell out a phrase in braille.
 
