--- a/_posts/2011-12-03-jandig.md
+++ b/_posts/2011-12-03-jandig.md
@@ -9,9 +9,9 @@ collab: http://memelab.com.br/
 ---
 ![](/assets/projects/jandig/Jandig_street.jpg)
 
-This was an interesting collaboration with VJ Pixel and other people at the [memeLab](http://memelab.com.br/).
+This was an interesting collaboration with VJ Pixel and other people at **memeLab**.
 
-Jandig is a platform/installation for creating temporary exhibitions of digital or digitalized works or messages. Through the use of [augmented reality technology](http://code.google.com/p/andar/), users can use their own phones to view these virtual works distributed throughout a physical environment.
+Jandig is a platform/installation for creating temporary exhibitions of digital or digitalized works or messages. Through the use of an [augmented reality library](http://code.google.com/p/andar/){:target="_blank"}, users can use their own phones to view these virtual works distributed throughout a physical environment.
 
 For our very first installation, we made small black and white paper markers and glued them throughout the Santa Cecilia neighborhood of downtown São Paulo.
 
@@ -19,7 +19,7 @@ When viewed through the software, these markers changed into photographs or draw
 
 ![](/assets/projects/jandig/Jandig00.jpg)
 
-I was mostly responsible for writing the Java code for the Android application. This involved modifying/fixing the [AndAR](http://code.google.com/p/andar/) code and integrating it into a system that could recognize multiple markers and display pre-selected 2D images.
+I was mostly responsible for writing the Java code for the Android application. This involved modifying/fixing the [AndAR](http://code.google.com/p/andar/){:target="_blank"} code and integrating it into a system that could recognize multiple markers and display pre-selected 2D images.
 
 I was also responsible for figuring out how to display animated GIFs using OpenGL textures:
 
