--- a/_posts/2012-06-24-evo-repro.md
+++ b/_posts/2012-06-24-evo-repro.md
@@ -3,10 +3,9 @@ category: draft
 title: Evo-Repro
 description: interactive installation
 ---
-In June of 2012 I was invited to collaborate remotely on Evo-Repro, a really awesome project being created by a group of scientists and artists led by the talented [Joana Ricou](http://www.joanaricou.com/) at the [STUDIO for Creative Inquiry](http://studioforcreativeinquiry.org/) in Pittsburgh.
+In June of 2012 I was invited to collaborate remotely on Evo-Repro, a really awesome project being created by a group of scientists and artists led by the talented [Joana Ricou](http://www.joanaricou.com/){:target="_blank"} at the [STUDIO for Creative Inquiry](http://studioforcreativeinquiry.org/){:target="_blank"} in Pittsburgh.
 
-From [their site](http://evorepro.tumblr.com/):
-
+From [their site](http://evorepro.tumblr.com/){:target="_blank"}:
 Evo-Repro is a simulation that explores the relationship between evolution and reproduction. Life’s definition still escapes us but two characteristics are undeniable: life multiplies and life evolves. The two processes serve the same function: the continuation of Life – but it’s hard to separate the two.
 
 ![](/assets/projects/evo-repro/evo01.png)
@@ -19,11 +18,11 @@ Part of the second stage of development of the project consisted of building an 
 
 ![](/assets/projects/evo-repro/evo_interaction.png)
 
-I helped design the drawing interface used during this stage of the project. The interface is just a collection of buttons for the users to pick different colors and brush types. The most fun part of this project was designing the different brush-type effects. There's a web prototype version of the interface [on OpenProcessing](http://www.openprocessing.org/sketch/64067), and code [on github](https://github.com/thiagohersan/evoReproBrushProcessing).
+I helped design the drawing interface used during this stage of the project. The interface is just a collection of buttons for the users to pick different colors and brush types. The most fun part of this project was designing the different brush-type effects. There's a web prototype version of the interface [on OpenProcessing](http://www.openprocessing.org/sketch/64067){:target="_blank"}, and code [on github](https://github.com/thiagohersan/evoReproBrushProcessing){:target="_blank"}.
 
 ![](/assets/projects/evo-repro/evo_interface.png)
 
-The Evo-Repro site has [more](http://evorepro.tumblr.com/post/27481040582/screenshot) [examples](http://evorepro.tumblr.com/post/27353809477/screenshot-from-painting-with-natural-selection) of the [drawings](http://evorepro.tumblr.com/post/27833528115/by-celine-berger) that they’ve been making with the interface.
+The Evo-Repro site has [more](http://evorepro.tumblr.com/post/27481040582/screenshot){:target="_blank"} [examples](http://evorepro.tumblr.com/post/27353809477/screenshot-from-painting-with-natural-selection){:target="_blank"} of the [drawings](http://evorepro.tumblr.com/post/27833528115/by-celine-berger){:target="_blank"} that they’ve been making with the interface.
 
 ![](/assets/projects/evo-repro/evo_drawing.jpg)
 
