--- a/_posts/2012-08-17-versom.md
+++ b/_posts/2012-08-17-versom.md
@@ -23,7 +23,7 @@ This one released running streams of vowels in different directions:
 
 ![](/assets/projects/versom/AE.png)
 
-This one used a [physics engine](http://www.jbox2d.org/) to simulate realistic arcing trajectories for small words made up of vowels:
+This one used a [physics engine](http://www.jbox2d.org/){:target="_blank"} to simulate realistic arcing trajectories for small words made up of vowels:
 
 ![](/assets/projects/versom/I.png)
 
@@ -31,6 +31,6 @@ More than one scene can be enabled at any given time, with different vowels, det
 
 ![](/assets/projects/versom/AEOU.png)
 
-The vowel-detection system was developed in Max/MSP using [Linear Predictive Coding](http://en.wikipedia.org/wiki/Linear_predictive_coding) analysis and filtering.
+The vowel-detection system was developed in Max/MSP using [Linear Predictive Coding](http://en.wikipedia.org/wiki/Linear_predictive_coding){:target="_blank"} analysis and filtering.
 
-The Processing code for the [scenes](https://github.com/thiagohersan/VersomVogaisProcessing) and the [control panel](https://github.com/thiagohersan/VersomControleProcessing) are on github.
+The Processing code for the [scenes](https://github.com/thiagohersan/VersomVogaisProcessing){:target="_blank"} and the [control panel](https://github.com/thiagohersan/VersomControleProcessing){:target="_blank"} are on github.
