--- a/_posts/2012-09-01-auras.md
+++ b/_posts/2012-09-01-auras.md
@@ -6,7 +6,7 @@ github: https://github.com/thiagohersan/auras04Arduino
 ---
 ![](/assets/projects/auras/bio01.jpg)
 
-The [Kirlian photography apparatus](/project/kirlian-machine/) that I built together with Livia Chagas and Wemerson Machado worked pretty well for taking pictures of fingers, plants, coins and other metallic objects, but it was not very practical for taking pictures of someone's entire aura.
+The [Kirlian photography apparatus](/kirlian-machine/) that I built together with Livia Chagas and Wemerson Machado worked pretty well for taking pictures of fingers, plants, coins and other metallic objects, but it was not very practical for taking pictures of someone's entire aura.
 
 And this is where we start bending this project's own notion of authenticity. Like many other works of art, it's all about context and constructed narratives. Like many other acts of charlatanism, it's all about context and constructed narratives.
 
