--- a/_posts/2013-01-27-el-abismo.md
+++ b/_posts/2013-01-27-el-abismo.md
@@ -7,16 +7,17 @@ github: https://github.com/astrovandalistas/AbismoTwitterOF
 vimeo: https://vimeo.com/77638955
 pics: https://www.flickr.com/photos/microhom/sets/72157632606087124
 astros: http://astrovandalistas.cc/abismo/
+swipebox: abismoTwitter
 ---
 ![](/assets/projects/el-abismo/logoHEADER1.jpg)
 
-*El Abismo* is part live performance, part construction of a collective memory of the events that took place during [The Mexican Spring of 2012](http://en.wikipedia.org/wiki/Yo_Soy_132), built by those who participated in the manifestations.
+*El Abismo* is part live performance, part construction of a collective memory of the events that took place during [The Mexican Spring of 2012](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"}, built by those who participated in the manifestations.
 
 <div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/77638955?title=0&amp;byline=0&amp;portrait=0&amp;color=a9aeb0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+  <iframe src="//player.vimeo.com/video/77638955?title=0&amp;byline=0&amp;portrait=0&amp;color=a9aeb0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
 
-People were invited to participate in the construction of this collective archive by submitting their images, videos, audio tracks and texts through an online platform, or, much like the original [*Yo Soy 132*](http://en.wikipedia.org/wiki/Yo_Soy_132) movement, by submitting texts via twitter using a specific hashtag.
+People were invited to participate in the construction of this collective archive by submitting their images, videos, audio tracks and texts through an online platform, or, much like the original [*Yo Soy 132*](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"} movement, by submitting texts via twitter using a specific hashtag.
 
 ![](/assets/projects/el-abismo/abismo10.jpg)
 
@@ -29,11 +30,3 @@ Besides helping organize the workshops, my other contribution to the project was
 ![](/assets/projects/el-abismo/abismoLPM05.jpg)
 
 I wrote software to build graphical compositions made up of words and phrases from tweets sent with a specific hashtag during the performance. Some of my favorites:
-
-![](/assets/projects/el-abismo/abismoTwitter05.jpg)
-
-![](/assets/projects/el-abismo/abismoTwitter03.jpg)
-
-![](/assets/projects/el-abismo/abismoTwitter01.jpg)
-
-![](/assets/projects/el-abismo/abismoTwitter00.jpg)
