--- a/_posts/2013-03-17-bangmty.md
+++ b/_posts/2013-03-17-bangmty.md
@@ -12,7 +12,7 @@ astros: http://astrovandalistas.cc/ast/
 
 This was version 2.0 of the *Arma Sonora Telemática*, which is a device/concept used to amplify and direct people's opinions from the internet to a physical space. It is a tool for voicing the collective discontent over the role of violence in Mexico's recent history.
 
-In March of 2013, during a workshop at the [Nrmal Festival](http://festivalnrmal.net/) in Monterrey, México, a shipping container was turned into a percussive sequencer using a motor and a system of hammers and pulleys, which were activated every time someone used the hashtag #BangMTY on Twitter.
+In March of 2013, during a workshop at the [Nrmal Festival](http://www.nrmal.net/){:target="_blank"} in Monterrey, México, a shipping container was turned into a percussive sequencer using a motor and a system of hammers and pulleys, which were activated every time someone used the hashtag #BangMTY on Twitter.
 
 ![](/assets/projects/bangmty/motor00.jpg)
 
