--- a/_posts/2014-11-10-0-25-fps.md
+++ b/_posts/2014-11-10-0-25-fps.md
@@ -28,8 +28,8 @@ As a public art intervention, this project is a kind of homage to other forms of
 
 ![](/assets/projects/0-25-fps/FIESP00_tgh_12.png)
 
-0.25 FPS was commissioned for the 3rd [SP_Urban Festival](http://spurban.com.br/) in São Paulo, Brazil.
+0.25 FPS was commissioned for the 3rd [SP_Urban Festival](http://spurban.com.br/){:target="_blank"} in São Paulo, Brazil.
 
 <div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/114106478?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+  <iframe src="//player.vimeo.com/video/114106478?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
