--- a/_posts/2014-12-12-memememe.md
+++ b/_posts/2014-12-12-memememe.md
@@ -13,13 +13,13 @@ collab: https://www.radames.in/
 
 Ongoing project with Radamés Ajna, where we are investigating what happens when the tools we use to communicate start to have more fun than we do, while communicating.
 
-This project was awarded a [VIDA 15.0](https://vida.fundaciontelefonica.com/proyectos/vida-15/) production incentive award and residency to research different methods of interaction, recognition and communication between objects.
+This project was awarded a [VIDA 15.0](https://vida.fundaciontelefonica.com/proyectos/vida-15/){:target="_blank"} production incentive award and residency to research different methods of interaction, recognition and communication between objects.
 
 <div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/88619700?portrait=0&amp;color=ff9933" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+  <iframe src="//player.vimeo.com/video/88619700?portrait=0&amp;color=ff9933" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
 
-The research done during the residency resulted in a set of sculptures inspired by Gordon Pask's [Conversation Theory](http://www.pangaro.com/published/cyb-and-con.html) and Paul Pangaro's work on Interaction.
+The research done during the residency resulted in a set of sculptures inspired by Gordon Pask's [Conversation Theory](http://www.pangaro.com/published/cyb-and-con.html){:target="_blank"} and Paul Pangaro's work on Interaction.
 
 ## memememe#selfie
 memememe#selfie explores how we construct identity and environment through conversation, and the consequences of unilateral communication, in the context of our contemporary preoccupation with trending, liking, following, etc.
@@ -29,7 +29,7 @@ memememe#selfie explores how we construct identity and environment through conve
 What are the consequences (or limitations) of communicating without an other? Can we just as easily construct our identity and understand our environment while talking to ourselves? What is the sound of a one-sided conversation?
 
 <div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/108008040" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+  <iframe src="//player.vimeo.com/video/108008040" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
 
 ## memememe2memememe
@@ -49,5 +49,5 @@ Residues of their [conversation](http://memememeselfie.tumblr.com/){:target="_bl
 memememe was part of the Ob_ject and Ob_serve exhibition at A Small Gallery in Liverpool. The exhibition, organized by the [Object Liberation Front](http://olf.alab.space/){:target="_blank"}, explored different languages for revealing the desires, memories and inner conversations of objects and non-human phenomena, in an attempt to understand how they shape the construction of their own worlds, and in turn, ours.
 
 <div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/165396798" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+  <iframe src="//player.vimeo.com/video/165396798" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
 </div>
