--- a/_posts/2015-06-28-b10s.md
+++ b/_posts/2015-06-28-b10s.md
@@ -10,13 +10,13 @@ collab: http://www.interspecifics.cc/
 ---
 ![](/assets/projects/b10s/b10s06.jpg)
 
-Project done as part of the [Interspecifics](http://www.interspecifics.cc/) collective.
+Project done with the [Interspecifics](http://www.interspecifics.cc/){:target="_blank"} collective.
 
 The B10S programme was a series of meetings for the artistic exploration of life sciences. Through a series of practical, experimental laboratories, the project tried to analyze and understand some of the tools and strategies present in the practice of bio-art from a Latin American perspective.
 
 For the second meeting of the project, we decided to explore sensory substitution and its implications on the body.
 
-The term sensory substitution refers to a non-invasive technique introduced by the neuroscientist [Paul Bach-y-Rita](https://en.wikipedia.org/wiki/Paul_Bach-y-Rita) in the 60's to assist the restoration of damaged senses using hybrid brain-machine interfaces to redirect certain stimuli from one sensory modality to another and use the elasticity of the brain to replace certain perceptual capabilities. It suggests that while the brain and any one of its connections to the environment operate properly, peripheral sensory systems are secondary in the exercise of global cognition.
+The term sensory substitution refers to a non-invasive technique introduced by the neuroscientist [Paul Bach-y-Rita](https://en.wikipedia.org/wiki/Paul_Bach-y-Rita){:target="_blank"} in the 60's to assist the restoration of damaged senses using hybrid brain-machine interfaces to redirect certain stimuli from one sensory modality to another and use the elasticity of the brain to replace certain perceptual capabilities. It suggests that while the brain and any one of its connections to the environment operate properly, peripheral sensory systems are secondary in the exercise of global cognition.
 
 ![](/assets/projects/b10s/b10s01.jpg)
 
