--- a/_posts/2010-11-15-e-ansa.md
+++ b/_posts/2010-11-15-e-ansa.md
@@ -9,9 +9,9 @@ collab: http://www.onascimento.com/
 ---
 ![](/assets/projects/e-ansa/eansa_sensor.jpg)
 
-This was a collaboration with [Ricardo O'Nascimento](http://www.onascimento.com/), while I was working as a technical adviser for the artistic residents at the São Paulo Museum of Image and Sound.
+This was a collaboration with [Ricardo O'Nascimento](http://www.onascimento.com/){:target="_blank"}, while I was working as a technical adviser for the artistic residents at the São Paulo Museum of Image and Sound.
 
-The project involved making a dress that would produce visual and tactile responses to the presence of cell phone signals. There's more info at Ricardo's [page](http://www.onascimento.com/#/e-ans/).
+The project involved making a dress that would produce visual and tactile responses to the presence of cell phone signals. There's more info at Ricardo's [page](http://www.onascimento.com/e-ans/){:target="_blank"}.
 
 ![](/assets/projects/e-ansa/eansa1.jpg)
 
@@ -25,4 +25,4 @@ There were a lot of fans! and a lot of wire!
 
 ![](/assets/projects/e-ansa/eansa0.jpg)
 
-This project has been shown in a variety of festivals and exhibitions, and in 2012 it won an award at the [International Festival for Computer Based Art](http://t-m-a.de/cynetart/cfp-2012/preistrager?lang=en) in Dresden.
+This project has been shown in a variety of festivals and exhibitions, and in 2012 it won an award at the [International Festival for Computer Based Art](http://t-m-a.de/cynetart/cfp-2012/preistrager?lang=en){:target="_blank"} in Dresden.
