fixes video-wrapper-small

--- a/_posts/2010-11-15-e-ansa.md
+++ b/_posts/2010-11-15-e-ansa.md
@@ -26,3 +26,9 @@ There were a lot of fans! and a lot of wire!
 ![](/assets/projects/e-ansa/eansa0.jpg)
 
 This project has been shown in a variety of festivals and exhibitions, and in 2012 it won an award at the [International Festival for Computer Based Art](http://t-m-a.de/cynetart/cfp-2012/preistrager?lang=en){:target="_blank"} in Dresden.
+
+<div class="video-wrapper-wrapper-small">
+  <div class="video-wrapper video-wrapper-16x9">
+    <iframe src="//www.youtube.com/embed/tmwED62V0W8" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
