--- a/_posts/2011-12-03-jandig.md
+++ b/_posts/2011-12-03-jandig.md
@@ -23,8 +23,7 @@ I was mostly responsible for writing the Java code for the Android application. 
 
 I was also responsible for figuring out how to display animated GIFs using OpenGL textures:
 
-
-<div class="video-wrapper-small">
+<div class="video-wrapper-wrapper-small">
   <div class="video-wrapper video-wrapper-4x3">
     <iframe src="//www.youtube.com/embed/z-lzqEBYgEU" frameborder="0" allowfullscreen></iframe>
   </div>
