--- a/_posts/2015-06-28-b10s.md
+++ b/_posts/2015-06-28-b10s.md
@@ -5,7 +5,7 @@ description: apparatus for extra sesorial exploration
 github: https://github.com/interspecifics/B10s_Senses
 vimeo: https://vimeo.com/171043803
 pics: https://www.flickr.com/photos/microhom/albums/72157655059885880
-www: http://b10s.cc/
+www: http://interspecifics.cc/work/sensorial-substitution-lab/
 collab: http://www.interspecifics.cc/
 ---
 ![](/assets/projects/b10s/b10s06.jpg)
