--- a/_posts/2015-06-15-rnr.md
+++ b/_posts/2015-06-15-rnr.md
@@ -1,19 +1,19 @@
 ---
 category: draft
-title: RnR
+title: Rock and Roll
 description: custom software and prints
 ---
 Three songs with the same name, but by different artists and genres, are processed by custom software that analyzes and orders their samples by numeric value.
 
-In addition to this sorted view, the images also show each song using a waveform of the original sample order (the top form).
+This is part of a project where songs are recreated from different songs with the same name, by sorting and reordering their numerical samples. It references certain cultural tensions in the implicit "borrowing" of traditional R&B tunes in the construction of Rock and Roll.
 
-This is part of a project where songs are recreated from different songs with the same name, by sorting and reordering their numerical samples. It references certain cultural tensions in the implicit "borrowing" of traditional R&B tunes in the construction of Rock and Roll. And it also hints at more contemporary issues of "borrowing" songs and data under digital formats. There are only so many values for each sample, so instead of sending you a copy of an audio file I can send you recipes for reorganizing one of your files into other songs... Does this make this kind of metadata more expressive (or powerful) than the data itself?
+There are only so many values for each sample, so instead of sending you a copy of an audio file I can send you recipes for reorganizing one of your files into other songs... Does this make this kind of metadata more expressive (or powerful) than the data itself?
 
-(1970)
+### Rock & Roll (1970)
 ![](/assets/projects/rnr/1970.png)
 
-(1971)
+### Rock and Roll (1971)
 ![](/assets/projects/rnr/1971.png)
 
-(1999)
+### Rock N Roll (1999)
 ![](/assets/projects/rnr/1999.png)
