update rock and roll

--- a/_posts/2015-06-15-rnr.md
+++ b/_posts/2015-06-15-rnr.md
@@ -1,13 +1,15 @@
 ---
-category: draft
+category: project
 title: Rock and Roll
 description: custom software and prints
+filters: 'filter-analog'
+github: https://github.com/thiagohersan/soundSort
 ---
 Three songs with the same name, but by different artists and genres, are processed by custom software that analyzes and orders their samples by numeric value.
 
-This is part of a project where songs are recreated from different songs with the same name, by sorting and reordering their numerical samples. It references certain cultural tensions in the implicit "borrowing" of traditional R&B tunes in the construction of Rock and Roll.
+This is part of a project where songs are recreated from different songs with the same name, by sorting and reordering their samples. It references certain cultural tensions in the "borrowing" of R&B songs in the construction of Rock and Roll.
 
-There are only so many values for each sample, so instead of sending you a copy of an audio file I can send you recipes for reorganizing one of your files into other songs... Does this make this kind of metadata more expressive (or powerful) than the data itself?
+There are only so many values for each sample, so instead of sending you a copy of an audio file I can send you recipes for reorganizing one of your files into other songs. Does this make this kind of metadata more expressive than the data itself?
 
 ### Rock & Roll (1970)
 ![](/assets/projects/rnr/1970.png)
