update rock and roll

--- a/_posts/2015-06-15-rnr.md
+++ b/_posts/2015-06-15-rnr.md
@@ -12,10 +12,10 @@ This is part of a project where songs are recreated from different songs with th
 There are only so many values for each sample, so instead of sending you a copy of an audio file I can send you recipes for reorganizing one of your files into other songs. Does this make this kind of metadata more expressive than the data itself?
 
 ### Rock & Roll (1970)
-![](/assets/projects/rnr/1970.png)
+[![](/assets/projects/rnr/1970.png)](/assets/projects/rnr/L1970.png){:target="_blank"}
 
 ### Rock and Roll (1971)
-![](/assets/projects/rnr/1971.png)
+[![](/assets/projects/rnr/1971.png)](/assets/projects/rnr/L1971.png){:target="_blank"}
 
 ### Rock N Roll (1999)
-![](/assets/projects/rnr/1999.png)
+[![](/assets/projects/rnr/1999.png)](/assets/projects/rnr/L1999.png){:target="_blank"}
