cleans up filters

--- a/_posts/2014-06-08-ctrl-z.md
+++ b/_posts/2014-06-08-ctrl-z.md
@@ -2,6 +2,7 @@
 category: project
 title: ctrl-z (you can't put an egg back inside a chicken)
 description: performance/product
+filters: 'filter-analog'
 github: https://github.com/thiagohersan/ctrl-z
 vimeo: https://vimeo.com/128310917
 swipebox: ctrl-z_0
