fix name of Cidade Queer, a Reader

--- a/_posts/2016-08-08-lgqd.md
+++ b/_posts/2016-08-08-lgqd.md
@@ -8,7 +8,7 @@ collab: http://www.cidadequeer.lanchonete.org/
 ---
 ![](/assets/projects/lgqd/lgqd00.jpg)
 
-*Text from [Cidade Queer Reader](http://www.edicoesaurora.com/cidade-queer-uma-leitora/){:target="_blank"} by Júlia Ayerbe*.
+*Text from [Cidade Queer, a Reader](http://www.edicoesaurora.com/cidade-queer-uma-leitora/){:target="_blank"} by Júlia Ayerbe*.
 
 
 To all appearances, queer is a term that came to Brazil by plane, landing in the academic world, in symposia, anthropology, and the visual arts. But as a foreign word, what does it enunciate? It is worth recalling that, even before finding the meaning of words, Brazil traditionally and easily swallows them through their signifiers -- we are extremely "adjustable" to the sounds coming from the outside.
