refactors vimeo embed code into an include

--- a/_posts/2012-07-16-bablrr.md
+++ b/_posts/2012-07-16-bablrr.md
@@ -11,9 +11,7 @@ collab: http://allyreeves.com/
 
 A collaboration with visual/IX designer Ally Reeves, Bablrr is inspired by our love of keeping it sneaky: in the past decade we've seen some amazing subversions of basic social networking tools like twitter, facebook and simple text messaging. We'd like to help people keep their quick texts under wraps when it comes to being monitored on anything other than a basic human scale.
 
-<div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/49729887" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-</div>
+{% include vimeo.html id="49729887" %}
 
 That's why we've created a super easy-to-use app that utilizes a trick you've likely seen before: converting text into an unusual image that insures only a human can read the numbers or messages being sent:
 
