--- a/_posts/2013-01-27-el-abismo.md
+++ b/_posts/2013-01-27-el-abismo.md
@@ -13,9 +13,7 @@ swipebox: abismoTwitter
 
 *El Abismo* is part live performance, part construction of a collective memory of the events that took place during [The Mexican Spring of 2012](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"}, built by those who participated in the manifestations.
 
-<div class="video-wrapper video-wrapper-16x9">
-  <iframe src="//player.vimeo.com/video/77638955?title=0&amp;byline=0&amp;portrait=0&amp;color=a9aeb0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-</div>
+{% include vimeo.html id="77638955" %}
 
 People were invited to participate in the construction of this collective archive by submitting their images, videos, audio tracks and texts through an online platform, or, much like the original [*Yo Soy 132*](http://en.wikipedia.org/wiki/Yo_Soy_132){:target="_blank"} movement, by submitting texts via twitter using a specific hashtag.
 
