--- a/_posts/2014-06-08-ctrl-z.md
+++ b/_posts/2014-06-08-ctrl-z.md
@@ -13,9 +13,7 @@ Part performance, part product, this is a kind of exercise in exploring the rela
 
 While [Angry Letters]({{ site.baseurl }}/angry-letters/) dealt with the materialization of anger, this is the materialization of something else. While in San Francisco, I recorded myself telling personal secrets, industrial secrets and reading my favorite parts from NDA documents of different tech companies based in the greater Silicon Valley region (specially the self-referential parts that specify rules regarding the document itself).
 
-<div class="video-wrapper video-wrapper-16x9">
-  <iframe src="//player.vimeo.com/video/128310917?byline=0&title=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
+{% include vimeo.html id="128310917" %}
 
 The waveforms from these recordings were then converted into shapes that were inscribed on the inside of 3D-printed eggs. I then tried to hide these eggs back inside chickens, but none of the ones I had agreed to participate.
 
