--- a/_posts/2015-06-28-b10s.md
+++ b/_posts/2015-06-28-b10s.md
@@ -30,6 +30,4 @@ The objective of this laboratory was to implement a prototype for sensorial subs
 
 Each participant built their own prototype made up of a RaspberryPi, camera, headphones, small current amplifier circuit and tongue paddle, and programmed it using a combination of Python scripts and SuperCollider patches.
 
-<div class="video-wrapper video-wrapper-16x9">
-    <iframe src="//player.vimeo.com/video/171043803?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-</div>
+{% include vimeo.html id="171043803" %}
