removes filters. adds astros category

--- a/_posts/2013-01-27-el-abismo.md
+++ b/_posts/2013-01-27-el-abismo.md
@@ -1,5 +1,5 @@
 ---
-category: project
+category: astrovandalistas
 title: El Abismo
 description: collaborative performance, collective documentation
 filters: 'filter-astrovandalistas'
