--- a/_posts/2013-03-17-bangmty.md
+++ b/_posts/2013-03-17-bangmty.md
@@ -1,5 +1,5 @@
 ---
-category: project
+category: astrovandalistas
 title: '#bangMTY'
 description: interactive public installation and intervention
 filters: 'filter-astrovandalistas filter-public-spaces'
