--- a/_posts/2011-12-03-jandig.md
+++ b/_posts/2011-12-03-jandig.md
@@ -1,5 +1,5 @@
 ---
-category: collaboration
+category: draft
 title: Jandig
 description: collaborative vistual installation/exhibition and mobile app
 github: https://github.com/memeLab/Jandig/
