renames SDR project

--- a/_posts/2014-12-25-sdr.md
+++ b/_posts/2014-12-25-sdr.md
@@ -1,13 +1,13 @@
 ---
 category: project
-title: Spectrum Dominance Radio
+title: SDR
 description: public interference radio software
 filters: 'filter-public-spaces'
-github: https://github.com/thiagohersan/SpectrumDominanceRadio
+github: https://github.com/thiagohersan/SDR
 vimeo: https://vimeo.com/252647372
 collab: http://impakt.nl/
 ---
-![](/assets/projects/spectrum-dominance-radio/diagram00.png)
+![](/assets/projects/sdr/diagram00.png)
 
 <div class="quote">
   The radio would be the finest possible communication apparatus in public life ... if it knew how to receive as well as to transmit, how to let the listeners speak as well as hear, how to bring them into relationships instead of isolating them.<br>
@@ -18,21 +18,21 @@ Generally speaking, this project deals with communication, and the control over 
 
 As we further our reliance on digital technologies, how can we maintain agency over our communications? How can we strengthen and legitimize new forms of occupation and appropriation of these virtual spaces?
 
-![](/assets/projects/spectrum-dominance-radio/fsd.jpg)
+![](/assets/projects/sdr/fsd.jpg)
 
 <p style="color:#fff;line-height:0.25;">.</p>
 The project's title is a reference to the military concept of [full-spectrum dominance](http://www.dtic.mil/doctrine/new_pubs/jp1_02.pdf){:target="_blank"}, a term used to describe "*control over all dimensions of the battlespace, effectively possessing an overwhelming diversity of resources in such areas as terrestrial, aerial, maritime, subterranean, extraterrestrial, psychological, biological, or cyber-technological, in order to permit the conduct of operations without effective opposition or prohibitive interference*".
 <p style="color:#fff;line-height:0.25;">.</p>
 
-![](/assets/projects/spectrum-dominance-radio/reports.jpg)
+![](/assets/projects/sdr/reports.jpg)
 
-As a reaction to full-spectrum dominance, Spectrum Dominance Radio acts very locally, promoting the occupation of different virtual spaces. It creates songs of protest by recontextualizing messages from social networking sites, and transmits them over analog radio waves. It explores how technology can be used to legitimize uses of public spaces, and if physical spaces can be used to resignify and give relevance to digital communications.
+As a reaction to full-spectrum dominance, SDR acts very locally, promoting the occupation of different virtual spaces. It creates songs of protest by recontextualizing messages from social networking sites, and transmits them over analog radio waves. It explores how technology can be used to legitimize uses of public spaces, and if physical spaces can be used to resignify and give relevance to digital communications.
 
-![](/assets/projects/spectrum-dominance-radio/diagram01.jpg)
+![](/assets/projects/sdr/diagram01.jpg)
 
 This particular system consists of a database of song lyrics whose grammatical structure has been analyzed and annoted using part-of-speech and sentiment classifiers. At the same time, twitter and other social networking sites are scraped for messages and hashtags expressing discontent, and their text is also analyzed using the part-of-speech and sentiment classifiers. Finally, custom software combines the tagged data to create texts that have the structure of the songs, but words from the public messages. These new songs are then "sung" by a modified Text-to-Speech system and broadcast by a small FM trasmitter hidden inside a radio.
 
-![](/assets/projects/spectrum-dominance-radio/radio_3774.jpg)
+![](/assets/projects/sdr/radio_3774.jpg)
 
 {% include swipebox.html prefix="radio_37" %}
 
