drafts un_tit_led

--- a/_posts/2011-05-30-un-tit-led.md
+++ b/_posts/2011-05-30-un-tit-led.md
@@ -1,5 +1,5 @@
 ---
-category: collaboration
+category: draft
 title: UN_TIT_LED
 description: interactive installation
 github: https://github.com/thiagohersan/un_tit_ledArduino
