--- a/_posts/2014-06-08-ctrl-z.md
+++ b/_posts/2014-06-08-ctrl-z.md
@@ -14,7 +14,7 @@ While [Angry Letters]({{ site.baseurl }}/angry-letters/) dealt with the material
 
 {% include vimeo.html id="128310917" %}
 
-The waveforms from these recordings were then converted into shapes that were inscribed on the inside of 3D-printed eggs. I then tried to hide these eggs back inside chickens, but none of the ones I had agreed to participate.
+The waveforms from these recordings were then converted into shapes that were inscribed on the inside of 3D-printed eggs. I then tried to hide these eggs back inside chickens...
 
 ![](/assets/projects/ctrl-z/ctrl-z_egg.jpg)
 
