--- a/_posts/2014-12-25-sdr.md
+++ b/_posts/2014-12-25-sdr.md
@@ -10,34 +10,28 @@ collab: http://impakt.nl/
 
 <div class="quote">
   The radio would be the finest possible communication apparatus in public life ... if it knew how to receive as well as to transmit, how to let the listeners speak as well as hear, how to bring them into relationships instead of isolating them.<br>
-  <span class="quote-author">Bertolt Brecht, 1932</span>
+  <div class="quote-author">Bertolt Brecht, 1932</div>
 </div>
 
-Generally speaking, this project deals with communication, and the control over the tools that we use to mediate these communications. From analogue to digital, from custom made to mass produced, our communication interfaces have never been entirely neutral or free of biases toward particular uses; they always reflect the agendas and ideologies of the groups who build and design them.
+![](/assets/projects/sdr/radio_3775.jpg)
 
-As we further our reliance on digital technologies, how can we maintain agency over our communications? How can we strengthen and legitimize new forms of occupation and appropriation of these virtual spaces?
+Generally speaking, this project is about the unresolved local/global, physical/virtual tensions of hybrid spaces.
 
-![](/assets/projects/sdr/fsd.jpg)
-
-<p style="color:#fff;line-height:0.25;">.</p>
-The project's title is a reference to the military concept of [full-spectrum dominance](http://www.dtic.mil/doctrine/new_pubs/jp1_02.pdf){:target="_blank"}, a term used to describe "*control over all dimensions of the battlespace, effectively possessing an overwhelming diversity of resources in such areas as terrestrial, aerial, maritime, subterranean, extraterrestrial, psychological, biological, or cyber-technological, in order to permit the conduct of operations without effective opposition or prohibitive interference*".
-<p style="color:#fff;line-height:0.25;">.</p>
-
-![](/assets/projects/sdr/reports.jpg)
-
-As a reaction to full-spectrum dominance, SDR acts very locally, promoting the occupation of different virtual spaces. It creates songs of protest by recontextualizing messages from social networking sites, and transmits them over analog radio waves. It explores how technology can be used to legitimize uses of public spaces, and if physical spaces can be used to resignify and give relevance to digital communications.
+SDR is a temporary, portable, occupation of the electromagnetic spectrum. It transmits songs of protest by recontextualizing messages from social networking sites.
 
 ![](/assets/projects/sdr/diagram01.jpg)
 
-This particular system consists of a database of song lyrics whose grammatical structure has been analyzed and annoted using part-of-speech and sentiment classifiers. At the same time, twitter and other social networking sites are scraped for messages and hashtags expressing discontent, and their text is also analyzed using the part-of-speech and sentiment classifiers. Finally, custom software combines the tagged data to create texts that have the structure of the songs, but words from the public messages. These new songs are then "sung" by a modified Text-to-Speech system and broadcast by a small FM trasmitter hidden inside a radio.
+The system consists of a database of song lyrics whose grammatical structure has been analyzed and annoted using part-of-speech and sentiment classifiers. At the same time, twitter and other social networking sites are scraped for messages and hashtags expressing discontent, and their text is also analyzed using the part-of-speech and sentiment classifiers.
+
+Finally, custom software combines the tagged data to create texts that have the structure of the songs, but words from the public messages. These new songs are then "sung" by a modified Text-to-Speech system and broadcast by a small FM trasmitter hidden inside a radio.
 
 ![](/assets/projects/sdr/radio_3774.jpg)
 
+In the end, there are protests hidden inside songs, and a transmitter hidden inside a receiver.
+
+Inspired by, and acting as a kind of "monument" for the [June 2013 manifestations](https://en.wikipedia.org/wiki/2013_protests_in_Brazil){:target="_blank"} in Brazil, the system creates its songs using MPB songs along with tweets and blog posts written between June and July of 2013.
+
 {% include swipebox.html prefix="radio_37" %}
-
-So in the end, there are protests hidden within songs, and a transmitter hidden inside a receiver.
-
-For its first broadcast, the system used MPB songs, along with tweets and blog posts written during the 2013 manifestations in Brazil.
 
 {% include vimeo.html id="251810364" %}
 
