reorganizes mememe post

--- a/_posts/2012-07-16-bablrr.md
+++ b/_posts/2012-07-16-bablrr.md
@@ -5,18 +5,16 @@ description: mobile app
 github: https://github.com/thiagohersan/BablrAndroid
 vimeo: https://vimeo.com/49729887
 www: https://play.google.com/store/apps/details?id=com.hersan.bablrr
-collab: http://allyreeves.com/
+collab: https://www.allyshah.com/
 ---
 ![](/assets/projects/bablrr/bablrr0002.png)
 
-A collaboration with visual/IX designer Ally Reeves, Bablrr is inspired by our love of keeping it sneaky: in the past decade we've seen some amazing subversions of basic social networking tools like twitter, facebook and simple text messaging. We'd like to help people keep their quick texts under wraps when it comes to being monitored on anything other than a basic human scale.
+A collaboration with [Ally Reeves](https://www.allyshah.com/){:target="_blank"}, Bablrr is inspired by our love of keeping it sneaky by subverting basic social networking tools like twitter, facebook and simple text messaging. We'd like to help people keep their quick texts under wraps when it comes to being monitored on anything other than a basic human scale.
 
 {% include vimeo.html id="49729887" %}
 
-That's why we've created a super easy-to-use app that utilizes a trick you've likely seen before: converting text into an unusual image that insures only a human can read the numbers or messages being sent:
+That's why we've created a super easy-to-use app that utilizes a trick you've likely seen before: converting text into an unusual image that insures only a human can read it.
 
 Bablrr provides a simple interface to share non-monetizable messages in social networking sites while drawing attention to issues concerning our digital public lives and the involuntary commercialization of our data.
 
 ![](/assets/projects/bablrr/bablrr_facebook.png)
-
-Babel On!
